--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Springのログレベルを設定
-logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.security=DEBUG
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+server.servlet.session.persistent=false
