--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Springのログレベルを設定
 logging.level.org.springframework.security=DEBUG
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# セッション都度破棄
 server.servlet.session.persistent=false
+
+# ヘッダの容量を大きくする
+server.max-http-request-header-size=1MB
