--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ server.servlet.session.persistent=false
 
 # ヘッダの容量を大きくする
 server.max-http-request-header-size=1MB
+
+# コンテキストパスURL
+server.servlet.context-path=/Matching
